Bug 868046 - Fix the wrong assert. r=nical